--- a/src/components/controls.css
+++ b/src/components/controls.css
@@ -1,7 +1,7 @@
 .wrapper {
   position: absolute;
-  bottom: 10px;
-  left: 30vw;
+  bottom: 0;
+  left: 20%;
   width: 200px;
   margin: auto;
   z-index: 0;
