--- a/src/components/controls.css
+++ b/src/components/controls.css
@@ -1,3 +1,13 @@
+.slider {
+  position: absolute;
+  width: 300px;
+  margin: auto;
+  top: 70%;
+  right: 0;
+  left: 0;
+  bottom: 0;
+}
+
 .wrapper {
   position: absolute;
   bottom: 0;
