--- a/src/components/controls.css
+++ b/src/components/controls.css
@@ -1,16 +1,15 @@
 .slider {
   position: absolute;
-  width: 300px;
   margin: auto;
-  top: 70%;
+  width: 50%;
+  top: 60%;
   right: 0;
   left: 0;
-  bottom: 0;
 }
 
 .wrapper {
   position: absolute;
-  bottom: 20%;
+  bottom: 0;
   left: 20%;
   width: 200px;
   margin: auto;
