--- a/src/components/controls.css
+++ b/src/components/controls.css
@@ -9,10 +9,12 @@
 
 .wrapper {
   position: absolute;
-  bottom: 0;
-  left: 20%;
-  width: 200px;
   margin: auto;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 30%;
   z-index: 0;
 }
 
